# dexter

./: .gitignore  BasicOR.py  Equation.py  LICENSE  Makefile  README.md  install_dev.py  pyproject.toml  requirements.txt  test_import.py
ABST/: Variable.py
Env/: __init__.py
Env/Grid/: scrap.py
Env/Grid/grid/: __init__.py  draw_grid.py  grid_environment.py  main.py
Invento/: scratch.ipynb
Lang/: model_scraper.ipynb
Lang/FineTune/: model.py
OPT/: Equation.py  Problem.py  Solution.py  __init__.py  scratchbook.ipynb
OPT/tests/: test_eq.py
Sim/: __init__.py
Stat/: Distribution.py  Funcs.py  RV.py  Sample.py  scratch.ipynb
Stats/: .coverage  Distribution.py  Funcs.py  RV.py  Sample.py  __init__.py  utils.py
Stats/tests/: test_rv.py
Viz/: scratchbook.ipynb  space.py
Wrangle/: modifiers.py
examples/: basic_optimization.ipynb
src/dexter/: __init__.py
src/dexter/board/: main.py
src/dexter/core/: Large_Simple_Inventory.csv
src/dexter/environment/: try.ipynb
src/dexter/language/: __init__.py
src/dexter/optimization/: equation.py  problem.py
src/dexter/stats/: funcs.py  testbook.ipynb
src/dexter/visualization/: scratchbook.ipynb
tests/: __init__.py  conftest.py
